fixed spacing and started storage

--- a/atc-react/src/App.css
+++ b/atc-react/src/App.css
@@ -80,7 +80,7 @@ html body {
 .mainPage {
   position:relative;
   margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
+  padding: 20px;
 }
 
 .topnav{
@@ -110,6 +110,8 @@ html body {
   height: 100px;
   width: 100px; 
   display: table;
+  margin:15px;
+  float:left;
 }
 
 .widgetTop{
@@ -141,4 +143,15 @@ html body {
   text-align: center;
   
   font-size: 12px;
+}
+
+.arrangeHorizont{
+  display:inline-block;
+  text-align: center;
+  justify-content: center;
+}
+
+.sectionDivider{
+  border-bottom: 1px solid;
+  padding-bottom: 10px;
 }
